--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ a {
   display: inline-block;
   vertical-align: top;
   top: 33px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   position: relative;
   padding: 11px 40px;
@@ -131,6 +133,10 @@ a {
   bottom: 41px;
   z-index: 20;
   font-size: 0;
+}
+
+.slider-controls label:hover {
+  background-color: #b2c1b7;
 }
 
 .slider-controls label {
@@ -196,10 +202,8 @@ a {
 .site-navigation,
 .user-navigation {
   list-style: none;
-  margin: 0;
+  margin: 12px 2px 0 9px;
   padding: 0;
-  margin-left: 11px;
-  margin-top: 10px;
 }
 
 .site-navigation {
@@ -322,9 +326,9 @@ a {
   display: inline-block;
   vertical-align: middle;
   text-decoration: underline;
-  padding: 10px 14px;
+  padding: 7px 14px;
   color: #ffffff;
-  border-radius: 15px;
+  border-radius: 20px;
   text-decoration: underline;
   -webkit-text-decoration-color: #adbdb4;
   text-decoration-color: #adbdb4;
@@ -406,9 +410,18 @@ a {
 }
 
 .filter-form {
-  margin-bottom: 26px;
+  margin: 19px 0 26px 0;
   font-size: 0;
-  margin-top: 19px;
+  max-width: 872px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .filter-form-item {
@@ -423,20 +436,20 @@ a {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding-left: 0px;
-  margin-bottom: 7px;
+  margin: 0 15px 16px 0;
+  padding: 7px 0 0 0;
+  max-width: 700px;
 }
 
 .filter-form-sort:focus,
 .filter-form-sort:hover {
   color: #323232;
   background: url("../img/icon-down-dir.svg") no-repeat right #aabcb2;
-  background-position: 93% 58%;
+  background-position: 94% 50%;
 }
 
 .filter-form-sort {
-  height: 36px;
-  padding: 0 25px 0 9px;
+  padding: 1px 9px 0px 11px;
   color: #fff;
   border: none;
   cursor: pointer;
@@ -445,7 +458,7 @@ a {
   line-height: 18px;
   font-weight: 500;
   background: url("../img/icon-down-dir-white.svg") no-repeat right #aabcb2;
-  background-position: 93% 58%;
+  background-position: 94% 50%;
   min-width: 190px;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -470,8 +483,8 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 31px;
-  padding-top: 10px;
+  padding-left: 29px;
+  padding-top: 9px;
 }
 
 .filter-form-radio {
@@ -489,7 +502,7 @@ a {
 }
 
 .filter-form-radio:last-child {
-  margin-right: 21px;
+  margin-right: 16px;
 }
 
 .filter-form-radio input {
@@ -532,14 +545,12 @@ a {
 }
 
 .fillers-checkboxes {
-  padding: 8px 0 0 25px;
+  padding: 8px 0 0 31px;
   height: 27px;
 }
 
 .filter-checkbox-control {
   position: relative;
-  display: inline-block;
-  vertical-align: middle;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -553,17 +564,26 @@ a {
   cursor: pointer;
   height: 0;
   width: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.filter-form-checkbox-label {
+  padding-left: 13px;
 }
 
 .filter-form-checkbox-label::before {
   position: absolute;
   background-image: url(../img/checkbox-off.svg);
-  left: -10px;
-  top: -3px;
+  left: -14px;
+  top: 0;
   content: "";
   width: 23px;
-  height: 23px;
+  height: 20px;
   opacity: 0.5;
+  padding: 0;
+  background-size: 19.5px 20px;
+  background-repeat: no-repeat;
 }
 
 .filter-form-checkbox-label:hover::before,
@@ -574,11 +594,11 @@ a {
 .filter-checkbox-control input:checked~.filter-form-checkbox-label::before {
   position: absolute;
   background-image: url(../img/checkbox-on.svg);
-  left: -10px;
-  top: -3px;
+  background-size: 23px 20px;
+  background-repeat: no-repeat;
+  left: -14px;
+  top: 0px;
   content: "";
-  width: 27px;
-  height: 23px;
   opacity: 0.8;
 }
 
@@ -592,12 +612,12 @@ a {
   line-height: 18px;
   font-weight: 500;
   color: #e4eae6;
-  padding: 7px 24px 7px 25px;
-  margin: 23px 0 0;
-  border-radius: 15px;
+  padding: 6px 27px 6px 28px;
+  margin: 23px 12px 0 0;
+  border-radius: 17px;
   border: 2px solid#ecefed;
   cursor: pointer;
-  margin-left: -6px;
+  /*! margin-left: -6px; */
 }
 
 .filter-form-botton:hover {
@@ -641,7 +661,7 @@ a {
 }
 
 .range-filter {
-  width: 215px;
+  width: 219px;
 }
 
 .filter-form-title {
@@ -656,9 +676,7 @@ a {
   height: 20px;
   padding-top: 16px;
   padding-right: 20px;
-  padding-left: 20px;
-  border-radius: 14px;
-  background-color: #a8bab0;
+  padding-left: 23px;
   cursor: pointer;
 }
 
@@ -668,9 +686,11 @@ a {
 }
 
 .range-controls .bar {
-  width: 70%;
+  width: 47%;
   height: 4px;
   background: #ffffff;
+  left: 41px;
+  position: absolute;
 }
 
 .range-controls .toggle {
@@ -751,6 +771,7 @@ a {
 
 .promo-cards-raspberries {
   background-image: url(../img//raspberries.png);
+  background-repeat: repeat;
 }
 
 .promo-cards-chocolate {
@@ -881,7 +902,7 @@ a {
   font-size: 16px;
   line-height: 22px;
   border-radius: 15px;
-  border-width: 1px;
+  border-width: 0;
   border-style: solid;
   padding: 21px 0 0 20px;
   -webkit-box-sizing: border-box;
@@ -897,12 +918,14 @@ a {
 }
 
 .blog a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 24px;
   line-height: 30px;
   text-decoration: underline;
-  background-color: #ffffff;
-  padding-right: 40%;
   color: #323232;
+  width: 290px;
 }
 
 .newsletter {
@@ -979,6 +1002,7 @@ a {
   flex-direction: column;
   padding: 29px 20px 0px 23px;
   color: #323232;
+  width: 100%;
 }
 
 .store-address .address-small {
@@ -1003,6 +1027,7 @@ a {
   font-size: 18px;
   line-height: 22px;
   margin: 4px 0;
+  color: #242229;
 }
 
 .open-feedback-form {
@@ -1030,7 +1055,7 @@ a {
 .icecream-card {
   width: 267px;
   position: relative;
-  margin-bottom: 40px;
+  margin-bottom: 38px;
   margin-right: 26px;
   border-radius: 5px;
   cursor: pointer;
@@ -1107,12 +1132,12 @@ a {
 }
 
 .card-price {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  position: relative;
   margin-top: -77px;
   text-align: left;
   font-size: 45px;
@@ -1120,11 +1145,11 @@ a {
 }
 
 .card-price span {
+  position: absolute;
+  top: 15px;
+  left: 110px;
   font-size: 30px;
   font-weight: 700;
-  top: 15px;
-  position: relative;
-  left: -3px;
 }
 
 .icecream-card img {
@@ -1134,10 +1159,19 @@ a {
 }
 
 .paginator {
-  margin: 20px 9px 36px 945px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  position: relative;
+  margin-top: 60px;
+  margin-bottom: 1px;
   padding-left: 35px;
   padding-top: 19px;
-  position: relative;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .disabled,
@@ -1146,31 +1180,35 @@ a {
 }
 
 .page {
-  display: inline-block;
-  vertical-align: top;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  top: -35px;
+  left: -3px;
+  text-align: center;
+  text-decoration: none;
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
   padding: 4px 8px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  color: #fff;
+  margin: 0 2px;
   border-radius: 50%;
+  color: #fff;
 }
 
 .next-page,
 .previous-page {
+  position: absolute;
+  top: -8px;
+  width: 9px;
   border-bottom: 2px solid #fff;
   border-left: 2px solid #fff;
   height: 9px;
-  position: absolute;
-  top: 30px;
-  width: 9px;
 }
 
 .previous-page {
-  left: 13px;
+  right: 178px;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -1187,7 +1225,7 @@ a {
 }
 
 .next-page {
-  right: -7px;
+  right: 2px;
   -webkit-transform: rotate(-135deg);
   -ms-transform: rotate(-135deg);
   transform: rotate(-135deg);
@@ -1222,6 +1260,8 @@ a {
   -ms-flex-align: center;
   align-items: center;
   width: 180px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding-top: 14px;
 }
@@ -1296,20 +1336,25 @@ a {
 
 .heart::before {
   content: "";
+  width: 15px;
+  height: 13px;
   position: absolute;
+  top: 3px;
+  left: 62px;
   background-image: url(../img/heart.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
-  width: 15px;
-  height: 13px;
-  top: 3px;
-  left: 62px;
 }
 
 .footer-social a,
 .footer-info a,
 .footer-copyright a {
   color: #ffffff;
+  padding-left: 1px;
+  text-decoration: underline;
+  -webkit-text-decoration-color: #adbdb4;
+  text-decoration-color: #adbdb4;
+  line-height: 16px;
 }
 
 .footer-copyright {
