--- a/css/style.css
+++ b/css/style.css
@@ -433,10 +433,7 @@ a {
   border: none;
   color: #ffffff;
   cursor: pointer;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  margin: 0 15px 16px 0;
+  margin: 0 13px 16px 0;
   padding: 7px 0 0 0;
   max-width: 700px;
 }
@@ -545,8 +542,9 @@ a {
 }
 
 .fillers-checkboxes {
-  padding: 8px 0 0 31px;
+  padding: 8px 17px 0 31px;
   height: 27px;
+  min-width: 654px;
 }
 
 .filter-checkbox-control {
@@ -557,6 +555,10 @@ a {
   -ms-user-select: none;
   user-select: none;
   margin-right: 32px;
+}
+
+.filter-checkbox-control:last-child {
+  margin-right: 0;
 }
 
 .filter-checkbox-control input {
@@ -615,9 +617,8 @@ a {
   padding: 6px 27px 6px 28px;
   margin: 23px 12px 0 0;
   border-radius: 17px;
-  border: 2px solid#ecefed;
+  border: 2px solid #ecefed;
   cursor: pointer;
-  /*! margin-left: -6px; */
 }
 
 .filter-form-botton:hover {
@@ -1340,7 +1341,7 @@ a {
   height: 13px;
   position: absolute;
   top: 3px;
-  left: 62px;
+  left: 65px;
   background-image: url(../img/heart.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -1352,7 +1353,7 @@ a {
   color: #ffffff;
   padding-left: 1px;
   text-decoration: underline;
-  -webkit-text-decoration-color: #adbdb4;
+  -webkit-text-decoration-color: #bdadad;
   text-decoration-color: #adbdb4;
   line-height: 16px;
 }
@@ -1559,6 +1560,7 @@ a {
   top: 100%;
   right: 0%;
   text-decoration: none;
+  min-height: 16px;
 }
 
 .search-dropdown:hover .search-form {
