--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,20 @@ a {
   padding: 0;
 }
 
+input[type="text"],
+input[type="password"],
+textarea {
+  border-radius: 4px;
+  border: 2px solid #d3d3d2;
+  padding: 3px 15px;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 24px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+}
+
 .main-slider {
   font-size: 18px;
   line-height: 1.2;
@@ -110,7 +124,12 @@ a {
   cursor: pointer;
 }
 
-.slide-button:hover {
+.slide-button:hover,
+.big-red-button:hover,
+.promo-button:hover,
+.open-feedback-form:hover,
+.cart-checkout:hover,
+.button-preview:hover {
   background: -webkit-gradient(linear, left top, left bottom, from(#f58669), to(#ec6f5e));
   background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background: -o-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
@@ -119,7 +138,12 @@ a {
   box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
 
-.slide-button:active {
+.slide-button:focus,
+.big-red-button:focus,
+.promo-button:focus,
+.open-feedback-form:focus,
+.cart-checkout:focus,
+.button-preview:focus {
   background: -webkit-gradient(linear, left top, left bottom, from(#d84732), to(#e1613e));
   background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background: -o-linear-gradient(top, #d84732 0%, #e1613e 100%);
@@ -135,7 +159,8 @@ a {
   font-size: 0;
 }
 
-.slider-controls label:hover {
+.slider-controls label:hover,
+.slider-controls label:focus {
   background-color: #b2c1b7;
 }
 
@@ -363,6 +388,7 @@ a {
 
 .catalog-body .catalog-a {
   background-color: #d07058;
+  text-decoration: none;
 }
 
 .breadcrumbs {
@@ -480,7 +506,7 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-left: 29px;
+  padding-left: 31px;
   padding-top: 9px;
 }
 
@@ -495,7 +521,7 @@ a {
   -ms-user-select: none;
   user-select: none;
   padding-left: 18px;
-  margin-right: 31px;
+  margin-right: 32px;
 }
 
 .filter-form-radio:last-child {
@@ -518,7 +544,8 @@ a {
   border-radius: 50%;
 }
 
-.filter-form-radio:hover input~.checkmark {
+.filter-form-radio:hover input~.checkmark,
+.filter-form-radio:focus input~.checkmark {
   border: 4px solid #fff;
 }
 
@@ -613,7 +640,7 @@ a {
   font-size: 16px;
   line-height: 18px;
   font-weight: 500;
-  color: #e4eae6;
+  color: #fff;
   padding: 6px 27px 6px 28px;
   margin: 23px 12px 0 0;
   border-radius: 17px;
@@ -636,15 +663,18 @@ a {
   box-shadow: inset 0 1px 2px 0 #696969;
 }
 
-.login-link:hover::before {
+.login-link:hover::before,
+.login-link:focus::before {
   background-image: url(../img/entrance.svg);
 }
 
-.button-search:hover::before {
+.button-search:hover::before,
+.button-search:focus::before {
   background-image: url(../img/loupe-black.svg);
 }
 
-.cart-button:hover::before {
+.cart-button:hover::before,
+.cart-button:focus:before {
   background-image: url(../img/basket-black.svg);
 }
 
@@ -706,18 +736,19 @@ a {
   cursor: pointer;
 }
 
-.range-controls .toggle:hover {
+.range-controls .toggle:hover,
+.range-controls .toggle:focus {
   top: 7px;
   border: 10px solid #ffffff;
   margin-left: -1px;
 }
 
 .range-controls .toggle-max {
-  left: 134px;
+  left: 136px;
 }
 
 .range-controls .toggle-min {
-  left: 35px;
+  left: 38px;
 }
 
 .container index-content {
@@ -772,11 +803,12 @@ a {
 
 .promo-cards-raspberries {
   background-image: url(../img//raspberries.png);
-  background-repeat: repeat;
+  background-size: cover;
 }
 
 .promo-cards-chocolate {
   background-image: url(../img//chocolate.png);
+  background-size: cover;
 }
 
 .promo-raspberries-content h3,
@@ -912,6 +944,7 @@ a {
   background-color: #ffffff;
   color: #323232;
   min-height: 220px;
+  background-size: cover;
 }
 
 .blog-header {
@@ -934,6 +967,7 @@ a {
   min-height: 220px;
   border-radius: 15px;
   background-image: url(https://htmlacademy-htmlcss.github.io/924839-gllacy/5/img/bg-post.svg);
+  background-size: cover;
   color: #5a5a5a;
   background-color: #f8f7f4;
 }
@@ -955,11 +989,13 @@ a {
   flex-wrap: wrap;
 }
 
-.user-mail {
+.mail-form .user-mail {
   -webkit-box-flex: 2;
   -ms-flex: 2;
   flex: 2;
   margin-right: 10px;
+  margin-bottom: -1px;
+  padding: 8px 0 9px 12px;
 }
 
 .mail-form button {
@@ -1082,7 +1118,8 @@ a {
   z-index: 2;
 }
 
-.icecream-card:hover::after {
+.icecream-card:hover::after,
+.icecream-card:focus::after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1114,9 +1151,10 @@ a {
   left: 13%;
 }
 
-.icecream-card:hover .button-preview {
+.icecream-card:hover .button-preview,
+.icecream-card:focus .button-preview {
   visibility: visible;
-  z-index: 1
+  z-index: 10;
 }
 
 .card-name {
@@ -1167,17 +1205,16 @@ a {
   -ms-flex-pack: end;
   justify-content: flex-end;
   position: relative;
-  margin-top: 60px;
-  margin-bottom: 1px;
+  margin-top: 25px;
+  margin-bottom: 37px;
   padding-left: 35px;
   padding-top: 19px;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 1px;
 }
 
-.disabled,
-.disabled::before {
-  border-color: rgba(255, 255, 255, 0.2);
+input:disabled~span {
+  opacity: .6;
 }
 
 .page {
@@ -1185,7 +1222,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  top: -35px;
+  /* top: -35px; */
   left: -3px;
   text-align: center;
   text-decoration: none;
@@ -1200,16 +1237,20 @@ a {
 
 .next-page,
 .previous-page {
-  position: absolute;
-  top: -8px;
-  width: 9px;
-  border-bottom: 2px solid #fff;
-  border-left: 2px solid #fff;
-  height: 9px;
+  position: relative;
+  top: 9px;
+  width: 8px;
+  border-bottom: 1px solid #fff;
+  border-left: 1px solid #fff;
+  height: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 9px;
 }
 
 .previous-page {
-  right: 178px;
+  /* right: 178px; */
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -1278,7 +1319,8 @@ a {
   opacity: 0.8;
 }
 
-.social-button:hover {
+.social-button:hover,
+.social-button:focus {
   opacity: 1;
   -webkit-box-shadow: 0 0 0 4px rgba(255, 255, 255, .7), inset 0 0 0 1px rgba(255, 255, 255, .6);
   box-shadow: 0 0 0 4px rgba(255, 255, 255, .7), inset 0 0 0 1px rgba(255, 255, 255, .6);
@@ -1395,7 +1437,8 @@ a {
   border-radius: 20px;
 }
 
-.htmlacademy-button:hover {
+.htmlacademy-button:hover,
+.htmlacademy-button:focus {
   background-color: #f07962;
   border-radius: 20px;
 }
@@ -1517,15 +1560,15 @@ a {
   border-radius: 25px;
   color: #ffffff;
   background-color: #ec583c;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
 }
-
-
-/*уточнить все кнопки и ссылки*/
 
 .big-red-button {
   display: inline-block;
   vertical-align: top;
-  padding: 8px 19px 12px;
+  padding: 8px 19px 8px;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
@@ -1551,7 +1594,8 @@ a {
   padding-top: 4px;
 }
 
-.catalog-dropdown:hover .catalog-dropdown-items {
+.catalog-dropdown:hover .catalog-dropdown-items,
+.catalog-dropdown:focus .catalog-dropdown-items {
   visibility: visible;
 }
 
@@ -1563,7 +1607,8 @@ a {
   min-height: 16px;
 }
 
-.search-dropdown:hover .search-form {
+.search-dropdown:hover .search-form,
+.search-dropdown:focus .search-form {
   visibility: visible;
 }
 
@@ -1580,11 +1625,13 @@ a {
   color: #323232;
 }
 
-.login-dropdown:hover .login-form {
+.login-dropdown:hover .login-form,
+.login-dropdown:focus .login-form {
   visibility: visible;
 }
 
-.cart-dropdown:hover .cart-form {
+.cart-dropdown:hover .cart-form,
+.cart-dropdown:focus .cart-form {
   visibility: visible;
 }
 
@@ -1645,20 +1692,6 @@ input[type="radio"].visually-hidden {
   display: none;
 }
 
-input[type="text"],
-input[type="password"],
-textarea {
-  border-radius: 4px;
-  border: 2px solid #d3d3d2;
-  padding: 3px 15px;
-  font-size: 16px;
-  font-weight: bold;
-  line-height: 24px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-}
-
 input[type="text"]::-webkit-input-placeholder,
 input[type="password"]::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
@@ -1693,10 +1726,7 @@ textarea:focus {
 }
 
 .feedback-form {
-  visibility: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -1713,7 +1743,11 @@ textarea:focus {
 }
 
 .feedback-form-show {
-  visibility: visible;
+  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  -webkit-animation: popup .5s;
+  animation: popup .5s;
 }
 
 .feedback-form-close {
@@ -1797,4 +1831,31 @@ textarea:focus {
 .previous-page,
 .next-page {
   font-size: 0;
+}
+
+@keyframes popup {
+  from {
+    -webkit-transform: scale(0);
+    transform: scale(0)
+  }
+  80% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2)
+  }
+  to {
+    -webkit-transform: scale(1);
+    transform: scale(1)
+  }
+}
+
+@-webkit-keyframes popup {
+  from {
+    -webkit-transform: scale(0)
+  }
+  80% {
+    -webkit-transform: scale(1.2)
+  }
+  to {
+    -webkit-transform: scale(1)
+  }
 }
